--- a/app/src/main/res/layout/update_trip.xml
+++ b/app/src/main/res/layout/update_trip.xml
@@ -163,7 +163,7 @@
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:inputType="text"
-                android:hint="@string/hotel"/>
+                android:hint="@string/vehicle"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
